# Game-2D

./: .gitignore  CMakeLists.txt  README_GAME  Untitled_Diagram.drawio  log_example.txt  main.cpp  отчот.docx
FCKing reports/: .$lb2 v.2.drawio.bkp  отчот1.docx
FCKing reports/lb1/: lb1.drawio
FCKing reports/lb2/: отчот2 v.2.docx
FCKing reports/lb4/: отчОт4.docx
FCKing reports/lb5/: lb5.drawio  отчОт5.docx
reports/lb2/: lb2 v.2.drawio  отчот2.docx
reports/lb3/: lb3.drawio  report_lab3.docx
reports/lb4/: lb4.drawio
reports/lb5/: report_lab5.docx
src/: Game.cpp  Game.h
src/Background/: Cell.cpp  Cell.h  Field.cpp  Field.h
src/Background/Cell/: CellBase.h  CellBuff.cpp  CellBuff.h  CellCoin.cpp  CellCoin.h  CellMove.cpp  CellMove.h  CellTrap.cpp  CellTrap.h  CellWall.h  ICell.h
src/Background/CellFactory/: CellFactory.cpp  CellFactory.h
src/Background/FieldGenerator/: FieldGenerator.cpp  FieldGenerator.h
src/CommandReader/: CommandReader.cpp  CommandReader.h
src/Control/: ControlBridge.cpp  ControlBridge.h
src/Control/ConfigReader/: ConfigReader.cpp  ConfigReader.h
src/Control/Configs/: FileConfig.cpp  FileConfig.h  IConfig.cpp  IConfig.h
src/Control/Controlers/: ConsoleControler.cpp  ConsoleControler.h  IControler.h
src/Entities/: Player.cpp  Player.h
src/Events/: Event.cpp  Event.h
src/Events/EventGenerator/: EventGenerator.cpp  EventGenerator.h  FieldEventGen.cpp  FieldEventGen.h  IEventGen.h  PlayerEventGen.cpp  PlayerEventGen.h
src/Events/FieldEvents/: FieldChangePos.cpp  FieldChangePos.h  FieldEvents.h  FieldNoWalls.cpp  FieldNoWalls.h  FieldRegen.cpp  FieldRegen.h  RegenField.cpp  RegenField.h
src/Events/GameEvents/: GameEvents.h  WinEvent.cpp  WinEvent.h
src/Events/PlayerEvents/: Buff.cpp  Buff.h  CoinEvent.cpp  CoinEvent.h  FrozenTrap.cpp  FrozenTrap.h  HealEvent.cpp  HealEvent.h  PlayerEvents.h  PoisonTrap.cpp  PoisonTrap.h  TreasureEvent.cpp  TreasureEvent.h
src/Generator/: FieldGen.h
src/Generator/Rules/: R_Column_Walls.h  R_Field_Size.h  R_Player_Spawn.h  R_Rand_Events.h  R_Rand_Walls.h  R_Row_Walls.h  R_Win_Cell.h  Util_Funcs.cpp  Util_Funcs.h
src/Logs/: Levels.h
src/Logs/LogPool/: LogPool.cpp  LogPool.h
src/Logs/Logger/: ConsoleLog.cpp  ConsoleLog.h  FileLog.cpp  FileLog.h  ILogger.h
src/Logs/Messages/: Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  MessageFactoryDestroyer.cpp  MessageFactoryDestroyer.h
src/Utils/: CommandReader.cpp  CommandReader.h  IOCommander.cpp  IOCommander.h  Mediator.cpp  Mediator.h
src/Utils/Med/: IMediator.h  Mediator.cpp  Mediator.h  MediatorObject.cpp  MediatorObject.h
src/Utils/Memento/: Loader.cpp  Loader.h  Memento.cpp  Memento.h  Saver.cpp  Saver.h
src/Utils/Obs/: IObserver.cpp  IObserver.h  ISubject.cpp  ISubject.h
src/Utils/RNG/: RNGenerator.cpp  RNGenerator.h
src/Views/: CellView.cpp  CellView.h  FieldView.cpp  FieldView.h  PlayerView.cpp  PlayerView.h
